# modfile

./: .gitignore  LICENSE  README.md  modfile.cabal  stack.yaml
examples/: putIT.hs  putS3M.hs  putXM.hs  readIT.hs  readS3M.hs  readXM.hs  test.s3m  testIT.hs  testS3M.hs  testXM.hs
src/: Util.hs
src/Codec/Tracker/: Common.hs  Format.hs  IT.hs  S3M.hs  XM.hs
src/Codec/Tracker/IT/: Header.hs  Instrument.hs  Pattern.hs  Sample.hs
src/Codec/Tracker/S3M/: Header.hs  Instrument.hs  Pattern.hs
src/Codec/Tracker/S3M/Instrument/: Adlib.hs  PCM.hs
src/Codec/Tracker/XM/: Header.hs  Instrument.hs  Pattern.hs  SampleHeader.hs
src/Data/Module/: IT.hs  MOD.hs  S3M.hs  XM.hs
src/Data/Module/IT/: Header.hs  Instrument.hs  Pattern.hs  Sample.hs
src/Data/Module/MOD/: Header.hs  Sample.hs
src/Data/Module/S3M/: Header.hs  Instrument.hs  Pattern.hs
src/Data/Module/S3M/Instrument/: Adlib.hs  PCM.hs
src/Data/Module/XM/: Header.hs  Instrument.hs  Pattern.hs  Sample.hs  SampleHeader.hs
