name:                modfile
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/riottracker/modfile#readme
license:             BSD3
license-file:        LICENSE
author:              kohlrabi
maintainer:          kohlrabi@kohlra.biz
copyright:           2016 kohlrabi
category:            music
build-type:          Simple
extra-source-files:  examples/readIT.hs
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Module.IT,
                       Data.Module.IT.Instrument
                       Data.Module.IT.Pattern
                       Data.Module.IT.Header
                       Data.Module.IT.Sample
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , split
  default-language:    Haskell2010

test-suite modfile-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , modfile
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/riottracker/modfile
